# stochtree-python

./: .buildinfo  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.html  index.html  install.html  objects.inv  searchindex.js
.github/workflows/: docs.yml
demo/: causal_inference.ipynb  causal_inference.py  supervised_learning.ipynb
demo/debug/: supervised_learning.py
demo/notebooks/: supervised_learning.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/: stochtree.cpp
stochtree/: __init__.py  bart.py  bcf.py  forest.py  utils.py
test/: test_json.py  test_preprocessor.py
